tests/suite/snapshots/suite__check__tests__check__bad_var_shadowing_2.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_var_shadowing_2.xi:6:21]
   │
 6 │                     foo: int
   ·                     ────┬───  
   ·                         ╰───── Name already bound in environment
───╯

